
   o New manual version

   o Manual is now online at http://nservant.github.io/HiC-Pro/

SIGNIFICANT USER-VISIBLE CHANGES

   o New configuration file with ALLELE_SPECIFIC_SNP field. If specified HiC-Pro is run in allele specific mode.

   o Improve stepwise analysis. Check input files according to the specified step

   o The split_reads.py utility can now handle fastq.gz files

BUG FIXES

   o Fix bugs in CIS short/long ranges interaction reporting

   o Fix bugs in bowtie pairing - option -m and -s

   o Fix bug in mapped_2hic_fragments when singleton are not removed during the pairing

***********************************
CHANGES IN VERSION 2.5.2

NEW FEATURES

   o New quality control plots, i.e. duplicates level, short/long range interactions, fragment size

SIGNIFICANT USER-VISIBLE CHANGES

   o HiC-Pro can now be run from BAM aligned files

   o Stepwise analysis can now be run in addition to the parallel mode

   o Additional checks when running the pipeline

   o Quality control plots are now run after each step instead of once at the end of the pipeline

BUG FIXES

   o Bug fixed when HiC-Pro is run with relative path

   o Bug fixed in mergeSAM.py in case of duplicated reference in the SAM header

   o Check PREFIX installation variable during installation process

***********************************
CHANGES IN VERSION 2.5.1

SIGNIFICANT USER-VISIBLE CHANGES

   o samtools 0.1.19 or higher is required

   o Any character after "\" in read names are now discarded so that myread\1 == myread\2

   o Warning is printed during the restriction fragment assignment is a chromosome is not defined in the annotation file

BUG FIXES

   o Add pyton path in ice_norm.sh

   o Bug fixed in iced genomic intervals symlink

   o Add missing ${PYTHON_PATH} variable in scripts

   o Add pysam check during installation

   o Bug in install process

   o Bug in python PATH

***********************************
CHANGES IN VERSION 2.5.0

SIGNIFICANT USER-VISIBLE CHANGES
